# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: __init__.py  generate_diff.py  parser.py
gendiff/formatters/: plain.py
gendiff/scripts/: diff.py  gendiff.py
project-50/code/: make_gendiff.py
project-50/scripts/: gendiff.py
project_50/: __init__.py  generate_diff.py  my_code.py  parser.py
project_50/formatters/: json.py  plain.py  stylish.py
project_50/scripts/: diff.py  gendiff.py
scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file1.yaml  file2.yaml  json_expected.txt
