[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vadimo <viktorov.vadimka@gmail.com>"]
packages = [
    { include = "project_50" },
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
gendiff = "project_50.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
