[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vadimo <viktorov.vadimka@gmail.com>"]
packages = [
    { include = "project_50" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "^5.0.4"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "project_50.scripts.diff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
